# Publications

./: README.md
TG_Cristiana_Yuri/Challenge/: build_all.sh  send_all.sh
TG_Cristiana_Yuri/Challenge/Receiver/: CMakeLists.txt  hsv_values.txt  main.cpp  qiproject.xml  segment_field_1.cpp  sendToNAO.sh
TG_Cristiana_Yuri/Challenge/Receiver/build-atom/: CMakeCache.txt  ChallengeNoWifi.cbp  Makefile  cmake_install.cmake
TG_Cristiana_Yuri/Challenge/Receiver/build-atom/sdk/share/qi/: path.conf
TG_Cristiana_Yuri/Challenge/Receiver/build-local/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
TG_Cristiana_Yuri/Challenge/Receiver/build-local/sdk/share/qi/: path.conf
TG_Cristiana_Yuri/Challenge/Receiver/include/: CommRobot.hpp  ReceiverRobot.hpp  TcpConnection.h  TransmitterRobot.hpp
TG_Cristiana_Yuri/Challenge/Receiver/src/: CommRobot.cpp  ReceiverRobot.cpp  TransmitterRobot.cpp  comms_robot.cpp
TG_Cristiana_Yuri/Challenge/Transmitter/: CMakeLists.txt  main.cpp  nao@192.168.0.51  qiproject.xml
TG_Cristiana_Yuri/Challenge/Transmitter/include/: SimNoWifiPacket.h  TransmitterRobot.hpp
TG_Cristiana_Yuri/Challenge/Transmitter/src/: TransmitterRobot.cpp  comms_robot.cpp
TG_Cristiana_Yuri/Challenge/common/: ButtonData.hpp  Conversions.cpp  Conversions.hpp  Odometry.hpp  kickFlag.hpp  kinematicsData.hpp  ledAuxiliarFunctions.cpp  ledAuxiliarFunctions.hpp  motionAuxiliarFunctions.cpp  motionAuxiliarFunctions.hpp  motionData.cpp  motionData.hpp  motionNAOqiFunction.cpp  motionNAOqiFunction.hpp  unBoard.hpp
TG_Cristiana_Yuri/Challenge/motion/: CMakeLists.txt  build.sh  motionClient.cpp  qiproject.xml  sendToNAO.sh
TG_Cristiana_Yuri/Challenge/motion/build-atom/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
TG_Cristiana_Yuri/Challenge/motion/build-atom/cmake/sdk/: agent-config.cmake  motion-config.cmake
TG_Cristiana_Yuri/Challenge/motion/build-atom/sdk/cmake/: agent-config.cmake  motion-config.cmake
TG_Cristiana_Yuri/Challenge/motion/data/pos/: getupBack.pos  stand.pos  standStraight.pos
TG_Cristiana_Yuri/Challenge/motion/include/: motion.hpp
TG_Cristiana_Yuri/Challenge/motion/runswift/libagent/: libagent.cpp  libagentOld.cpp
TG_Cristiana_Yuri/Challenge/motion/runswift/motion/: MotionAdapter.cpp  MotionAdapter.hpp  MotionOdometry.hpp
TG_Cristiana_Yuri/Challenge/motion/runswift/motion/effector/: AgentEffector.cpp
TG_Cristiana_Yuri/Challenge/motion/runswift/motion/generator/: ActionGenerator.cpp  BodyModel.hpp  ClippedGenerator.cpp  DeadGenerator.cpp  DistributedGenerator.cpp  DistributedGenerator.hpp  Generator.hpp  HeadGenerator.cpp  NullGenerator.cpp  PendulumModel.hpp  RefPickupGenerator.cpp  StandGenerator.cpp  Walk2014Generator.cpp  Walk2014Generator.hpp  WalkEnginePreProcessor.cpp  WalkEnginePreProcessor.hpp
TG_Cristiana_Yuri/Challenge/motion/runswift/motion/touch/: AgentTouch.cpp  FilteredTouch.cpp
TG_Cristiana_Yuri/Challenge/motion/runswift/perception/kinematics/: Kinematics.cpp  Kinematics.hpp  Parameters.hpp  Pose.cpp  Pose.hpp  SonarFilter.cpp
TG_Cristiana_Yuri/Challenge/motion/runswift/perception/vision/: Camera.cpp
TG_Cristiana_Yuri/Challenge/motion/runswift/types/: AbsCoord.hpp  ActionCommand.hpp  JointValues.hpp  RRCoord.tcc  SensorValues.hpp
TG_Cristiana_Yuri/Challenge/motion/runswift/utils/: incapacitated.hpp  options.cpp
TG_Cristiana_Yuri/Challenge/motion/src/: motion.cpp  naoqi_module_loader.cpp
TG_Cristiana_Yuri/Challenge/no_wifi_challenge-master/: .gitignore  README.md
TG_Cristiana_Yuri/Challenge/no_wifi_challenge-master/comms_robot/: comms_robot
TG_Cristiana_Yuri/Challenge/no_wifi_challenge-master/comms_robot/src/: CMakeLists.txt  TcpConnection.h  comms_robot.cpp  qiproject.xml
TG_Cristiana_Yuri/Challenge/no_wifi_challenge-master/comms_tester/: build.xml
TG_Cristiana_Yuri/Challenge/no_wifi_challenge-master/comms_tester/src/nowifichallengetester/: ClockHelper.java  CommsTester.java  ConnectionChangedListener.java  MainFrame.java  ReceiverConnection.java  SPLNoWifiConstants.java  (+4 more)
TG_Cristiana_Yuri/Challenge/no_wifi_challenge-master/include/: SPLNoWifiChallenge.h
TG_Cristiana_Yuri/coco_nao/: .gitignore  CMakeLists.txt  README.txt  package.xml
TG_Cristiana_Yuri/coco_nao/launch/: coco_nao.launch
TG_Cristiana_Yuri/coco_nao/matlab/: fixFile.py  results_trans_controller.m  time_diff.m  time_difference.m
TG_Cristiana_Yuri/coco_nao/matlab/Matlab_Vrep/: BuildModel.m  BuildModel2.m  BuildModelL.m  BuildModelR.m  BuildModelWR.m  GetCoordJoint.m  GetHandles.m  GetHandlesLeft.m  GetHandlesR.m  GetJoints.m  GetPose.m  GetPoseJoints.m  GetPoseJointsL.m  GetPoseJointsR.m  InitializeVREP.m  NAOCONTROLANDO.ttt  SetJoints.m  SetJointsL.m  SetJointsR.m  Workspace_Magico_3010.mat  control_fixed_distance_1DOF.m  controll_distance.m  controller_absolute.m  controller_fixed_position  controller_fixed_position.m  final_controller.m  naoTest.m  nao_both_hands  nao_both_hands.m  naovrep.m  pathdef.m  rotationControl.m
TG_Cristiana_Yuri/coco_nao/msg/: MoveJoint.msg  NaoChain.msg  NaoJoint.msg
TG_Cristiana_Yuri/coco_nao/nodes/: nao_subscriber_inv.py
TG_Cristiana_Yuri/coco_nao/nodes/utils/: nao_utils.py
TG_Cristiana_Yuri/coco_nao/src/: NAOSaver.cpp  NAOSaver.hpp
TG_Cristiana_Yuri/coco_nao/src/NAO_Data/: move_joint.cpp  move_joint.hpp  nao_joint_publisher.cpp  nao_joint_publisher.hpp
TG_Cristiana_Yuri/coco_nao/src/controllers/: AbsolutePositionController.cpp  AbsolutePositionController.hpp  FixedPositionController.cpp  FixedPositionController.hpp  NaoTestController.cpp  NaoTestController.hpp  OneDOFController.cpp  OneDOFController.hpp  RotationController.cpp  RotationController.hpp  SuperController.cpp  SuperController.hpp
TG_Cristiana_Yuri/coco_nao/src/examples/: NAODistance.cpp  NAODistance.hpp  NAOSuperController.cpp  NAOSuperController.hpp  NAOabsolute.cpp  NAOabsolute.hpp  NAOrelative.cpp  NAOrelative.hpp  NAOrotation.cpp  NAOrotation.hpp  naoPosition.cpp  naoPosition.hpp
TG_Cristiana_Yuri/coco_nao/src/robot_dh/: NAO.h
TG_Cristiana_Yuri/coco_nao/srv/: DQservice.srv  getAnglesDQ.srv
